<resources>

    <string name="app_name">MagnaApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="conf_psw">Confirm Password</string>
    <string name="sfondo_up">sfondo_up</string>
    <string name="forget_password">Forget Password</string>
    <string name="signup">Signup</string>
    <string name="nulla">nulla</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="past_orders">Past orders</string>
    <string name="setting">Setting</string>

    <string name="OppureAccediCon">Or login with</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storage">Storage</string>
    <string name="tipo_di_piatto">Tipo di piatto</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="Reset_psw">Reset Password</string>
    <string name="cnf_email">Conferma Email</string>

    <string-array name="menuList">
        <item>Antipasti</item>
        <item>Primi</item>
        <item>Secondi</item>
        <item>Bevande</item>
        <item>Dolci</item>
    </string-array>

    <string-array name="antipasti">
        <item>Crostini misti</item>
        <item>Tagliere di salumi</item>
        <item>Insalata di gamberi</item>
        <item>Lumachine</item>
        <item>Montanare</item>
        <item>Alici marinate</item>
        <item>Insalatona</item>
        <item>Carpaccio misto di pesce</item>
    </string-array>

    <integer-array name="antipastiPrezzo">
        <item>7</item>
        <item>9</item>
        <item>6</item>
        <item>5</item>
        <item>5</item>
        <item>7</item>
        <item>6</item>
        <item>12</item>
    </integer-array>

    <string-array name="primi">
        <item>Lasagne alla bolognese</item>
        <item>Tagliatelle al ragù</item>
        <item>Gramigna alla boscaiola</item>
        <item>Linguine allo scoglio</item>
        <item>Passatelli in brodo</item>
        <item>Tortellini in brodo</item>
        <item>Tortellini alla panna</item>
        <item>Trofie al pesto</item>
        <item>Gnocchi ai 4 formaggi</item>
    </string-array>

    <integer-array name="primiPrezzo">
        <item>10</item>
        <item>13</item>
        <item>9</item>
        <item>16</item>
        <item>12</item>
        <item>12</item>
        <item>11</item>
        <item>9</item>
        <item>10</item>
    </integer-array>

    <string-array name="secondi">
        <item>Fiorentina</item>
        <item>Hamburger di scottona</item>
        <item>Salsiccia ai ferri</item>
        <item>Grigliata mista</item>
        <item>Rostbeef</item>
        <item>Anatra al limone</item>
        <item>Pollo arrosto</item>
        <item>Filetto di salmone</item>
        <item>Orata al forno</item>
        <item>Polpo e patate</item>
    </string-array>

    <integer-array name="secondiPrezzo">
        <item>35</item>
        <item>9</item>
        <item>9</item>
        <item>25</item>
        <item>14</item>
        <item>11</item>
        <item>8</item>
        <item>18</item>
        <item>14</item>
        <item>16</item>
    </integer-array>

    <string-array name="bevande">
        <item>Acqua naturale 75cl</item>
        <item>Acqua gassata 75cl</item>
        <item>Coca-cola 33cl</item>
        <item>Coca-cola zero 33cl</item>
        <item>Fanta 33cl</item>
        <item>Sprite 33cl</item>
        <item>Birra piccola</item>
        <item>Birra media</item>
        <item>Birra grande</item>
        <item>Calice di vino rosso </item>
        <item>Calice di vino bianco </item>
    </string-array>

    <integer-array name="bevandePrezzo">
        <item>2</item>
        <item>2</item>
        <item>4</item>
        <item>4</item>
        <item>4</item>
        <item>4</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>6</item>
        <item>6</item>
    </integer-array>

    <string-array name="dolci">
        <item>Pastiera</item>
        <item>Cheesecake</item>
        <item>Tiramisu</item>
        <item>Salame al cioccolato</item>
        <item>Torta barozzi</item>
        <item>Semifreddo al limone</item>
        <item>Profittelore</item>
        <item>Brownie</item>
        <item>macedonia</item>

    </string-array>

    <integer-array name="dolciPrezzo">
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>4</item>
    </integer-array>

    <array name="portate">
        <item>@array/antipasti</item>
        <item>@array/primi</item>
        <item>@array/secondi</item>
        <item>@array/bevande</item>
        <item>@array/dolci</item>
    </array>

    <array name="prezziPortate">
        <item>@array/antipastiPrezzo</item>
        <item>@array/primiPrezzo</item>
        <item>@array/secondiPrezzo</item>
        <item>@array/bevandePrezzo</item>
        <item>@array/dolciPrezzo</item>
    </array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notification">Notifications</string>
    <string name="notifications">notifications</string>
    <string name="_0">0</string>

</resources>