<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_border"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/cnf_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/cnf_email_icon"
                android:autofillHints="@string/email"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/cnf_email_icon"
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/email" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/blue_border">

            <EditText
                android:id="@+id/cnf_email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/cnf_email_icon1"
                android:autofillHints="@string/cnf_email"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/cnf_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/cnf_email_icon1"
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/email" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Reset_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bluebox"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/Reset_psw"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>






    </LinearLayout>


</RelativeLayout>
